# azure-iot-sdk-c

./: .gitignore  CMakeLists.txt
build_all/ios/: CocoaPods.md
build_all/ios/samples/: README.md
build_all/ios/samples/AMQP-Client-Sample/: AMQP Client Sample-Bridging-Header.h  Podfile
build_all/ios/samples/AMQPWS-Client-Sample/: Podfile
build_all/ios/samples/File-Upload-Sample/: Podfile
build_all/ios/samples/HTTP-Client-Sample/: HTTP Client Sample-Bridging-Header.h  Podfile
build_all/ios/samples/MQTT-Client-Sample/: Podfile
build_all/ios/samples/MQTTWS-Client-Sample/: Podfile
build_all/linux/: build.sh
build_all/windows/: build.cmd
doc/: ubuntu_apt-get_sample_setup.md
iothub_client/: CMakeLists.txt
iothub_client/inc/: iothub_client.h  iothub_client_authorization.h  iothub_client_core.h  iothub_client_core_ll.h  iothub_client_edge.h  iothub_client_ll.h  iothub_client_ll_edge.h  iothub_client_private.h  iothub_transport_ll.h
iothub_client/inc/internal/: iothub_client_hsm_ll.h  iothub_client_private.h  iothub_transport_ll_private.h  iothubtransport.h  iothubtransport_amqp_common.h  iothubtransport_mqtt_common.h
iothub_client/samples/iothub_client_sample_amqp_shared/: iothub_client_sample_amqp_shared.c
iothub_client/samples/iothub_client_sample_amqp_websockets_shared/: iothub_client_sample_amqp_websockets_shared.c
iothub_client/samples/iothub_ll_c2d_sample/: iothub_ll_c2d_sample.c
iothub_client/samples/iothub_ll_c2d_sample/windows/: packages.config  (+1 more)
iothub_client/samples/iothub_ll_client_sample_amqp_shared/: iothub_ll_client_sample_amqp_shared.c
iothub_client/samples/iothub_ll_telemetry_sample/: iothub_ll_telemetry_sample.c
iothub_client/src/: iothub_client.c  iothub_client_authorization.c  iothub_client_core.c  iothub_client_core_ll.c  iothub_client_edge.c  iothub_client_ll.c  iothub_client_ll_edge.c  iothub_client_ll_uploadtoblob.c  iothub_device_client_ll.c  iothubtransport.c  iothubtransport_amqp_cbs_auth.c  iothubtransport_amqp_common.c  iothubtransport_mqtt_common.c  iothubtransportamqp.c  iothubtransportamqp_websockets.c  iothubtransporthttp.c  iothubtransportmqtt.c  iothubtransportmqtt_websockets.c
iothub_client/tests/: CMakeLists.txt
iothub_client/tests/common_e2e/: iothubclient_common_e2e.c
iothub_client/tests/iothub_client_authorization_ut/: iothub_client_authorization_ut.c
iothub_client/tests/iothubclient_amqp_modules_device_method_e2e/: iothubclient_amqp_modules_device_method_e2e.c
iothub_client/tests/iothubclient_amqp_modules_dt_e2e/: iothubclient_amqp_modules_dt_e2e.c
iothub_client/tests/iothubclient_amqp_modules_e2e/: iothubclient_amqp_modules_e2e.c
iothub_client/tests/iothubclient_amqp_modules_e2e_sfc/: iothubclient_amqp_modules_e2e_sfc.c
iothub_client/tests/iothubclient_ll_edge_ut/: iothubclient_ll_edge_ut.c
iothub_client/tests/iothubclient_ll_ut/: iothubclient_ll_ut.c
iothub_client/tests/iothubclient_mqtt_modules_device_method_e2e/: iothubclient_mqtt_modules_device_method_e2e.c
iothub_client/tests/iothubclient_mqtt_modules_dt_e2e/: iothubclient_mqtt_modules_dt_e2e.c  main.c
iothub_client/tests/iothubclient_mqtt_modules_e2e/: CMakeLists.txt  iothubclient_mqtt_modules_e2e.c  main.c
iothub_client/tests/iothubclient_mqtt_modules_e2e_sfc/: CMakeLists.txt  iothubclient_mqtt_modules_e2e_sfc.c  main.c
iothub_client/tests/iothubclient_mqtt_modules_ws_e2e/: CMakeLists.txt  iothubclient_mqtt_modules_ws_e2e.c  main.c
iothub_client/tests/iothubclient_uploadtoblob_e2e/: iothubclient_uploadtoblob_e2e.c
iothub_client/tests/iothubclient_ut/: CMakeLists.txt  iothubclient_ut.c
iothub_client/tests/iothubclientcore_ll_ut/: iothubclientcore_ll_ut.c
iothub_client/tests/iothubclientcore_ut/: iothubclientcore_ut.c
iothub_client/tests/iothubtransport_amqp_cbs_auth_ut/: iothubtransport_amqp_cbs_auth_ut.c
iothub_service_client/inc/: iothub_service_client_auth.h
iothub_service_client/src/: iothub_devicemethod.c  iothub_devicetwin.c  iothub_messaging_ll.c  iothub_registrymanager.c  iothub_service_client_auth.c
iothub_service_client/tests/iothub_devicemethod_ut/: iothub_devicemethod_ut.c
iothub_service_client/tests/iothub_devicetwin_ut/: iothub_devicetwin_ut.c
iothub_service_client/tests/iothub_msging_ll_ut/: iothub_messaging_ll_ut.c
iothub_service_client/tests/iothub_rm_ut/: iothub_rm_ut.c
iothub_service_client/tests/iothub_srv_client_auth_ut/: iothub_service_client_auth_ut.cpp
jenkins/: osx_xcode_native.sh
provisioning_client/: CMakeLists.txt
provisioning_client/adapters/: hsm_client_data.c  hsm_client_http_edge.c  hsm_client_http_edge.h
provisioning_client/inc/azure_prov_client/: prov_device_client.h  prov_device_ll_client.h  prov_transport_amqp_client.h  prov_transport_amqp_ws_client.h  prov_transport_http_client.h  prov_transport_mqtt_client.h  prov_transport_mqtt_ws_client.h
provisioning_client/samples/iothub_client_sample_hsm/: iothub_client_sample_hsm.c
provisioning_client/samples/prov_dev_client_sample/: prov_dev_client_sample.c
provisioning_client/src/: iothub_auth_client.c  iothub_security_factory.c  prov_auth_client.c  prov_device_ll_client.c  prov_sasl_tpm.c
provisioning_client/tests/: CMakeLists.txt
provisioning_client/tests/hsm_client_http_edge_ut/: hsm_client_http_edge_ut.c
provisioning_client/tests/iothub_auth_client_ut/: iothub_auth_client_ut.c
provisioning_client/tests/prov_device_client_ll_ut/: prov_device_client_ll_ut.c
provisioning_client/tests/prov_transport_amqp_client_ut/: prov_transport_amqp_client_ut.c
provisioning_client/tests/prov_transport_amqp_common_ut/: prov_transport_amqp_common_ut.c
provisioning_client/tests/prov_transport_amqp_ws_client_ut/: prov_transport_amqp_ws_client_ut.c
provisioning_client/tests/prov_transport_http_client_ut/: prov_transport_http_client_ut.c
provisioning_client/tests/prov_transport_mqtt_client_ut/: prov_transport_mqtt_client_ut.c
provisioning_client/tests/prov_transport_mqtt_common_ut/: prov_transport_mqtt_common_ut.c
provisioning_client/tests/prov_transport_mqtt_ws_client_ut/: prov_transport_mqtt_ws_client_ut.c
(+54 files in other folders)
